2009-01-27  Johannes Schmid  <jschmid@openismus.com>

	* glom/base_db.cc (set_field_value_in_database):
	Fix updating of fields with was broken due to a stupid mistake

2009-01-26  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: get_fields_for_table_from_database(),
	auto_increment_insert_first_if_necessary(),
	get_next_auto_increment_value(), insert_example_data():
	* glom/libglom/data_structure/field.cc: get_holder(): Adapt to 
	my set_value()/set_value_as_value() changes in libgdamm to slightly 
	simply the code. I guess that a better add_param() method could 
	simplify it more.

2009-01-26  Johannes Schmid  <jschmid@openismus.com>

	* glom/base_db.cc:
	* glom/base_db.h:
	Ported more queries to use parameters. query_execute_select() now
	accepts parameters.
	
	* glom/base_db_table_data.cc:
	* glom/dialog_database_preferences.cc:
	* glom/frame_glom.cc:
	* glom/mode_data/box_data.cc:
	* glom/mode_data/box_data_calendar_related.cc:
	* glom/mode_data/box_data_details.cc:
	* glom/mode_design/fields/box_db_table_definition.cc:
	* glom/mode_design/print_layouts/canvas_print_layout.cc:
	Removed parent_window argument from query_execute_select() call.
		
	* glom/libglom/data_structure/field.cc:
	* glom/libglom/data_structure/field.h:
	Added get_holder() und get_gda_holder_string() as conveniece methods

2009-01-25  Johannes Schmid <jschmid@openismus.com>

	* glom/base_db.cc:
	Some cosmetic changes to error messages and removed the reference()
	call that is obviously caused by a bug in the postgres provider.

2009-01-24  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/data_structure/fieldtypes.cc (constructor): Added
	GdaBlob as a fallback type for GdaBinary, so that
	Field::set_field_info() sets the correct glom type if the GType is
	GDA_TYPE_BLOB.

	* glom/libglom/data_structure/glomconversions.cc
	(get_pixbuf_for_gda_value): Allow the value having type
	GDA_TYPE_BLOB, and handle this appropriately. These changes fix images